--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ serde_json = "1.0"
 base64 = "0.21"
 regex = "1.5"
 rand = "0.8"
+reqwest = "0.11"
+reqwest-middleware = "0.4"
 
 [[bin]]
 name = "shuttle-app"
